[project]
name = "comparing-pyomo-pulp-and-or-tools-for-cons"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "ortools>=9.15.6755",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
